# BackgroundSubtractionCpp

./: CMakeLists.txt  README.md  main.cpp
